[package]
name = "bdiff"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Roseman <ethteck@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.10"
dtoa = "1.0.9"
eframe = { version = "0.22.0", features = ["persistence"] }
encoding_rs = "0.8.32"
iset = "0.2.2"
log = "0.4.20"
notify = "6.0.1"
rfd = "0.11.4"
serde = "1.0"
serde_json = "1.0"
