[package]
name = "bdiff"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Roseman <ethteck@gmail.com>"]
license = "MIT"
repository = "https://github.com/ethteck/bdiff"
readme = "README.md"
description = """
A(nother) binary diffing tool
"""
publish = false
build = "build.rs"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
dtoa = "1.0.9"
eframe = { version = "0.22.0", features = ["persistence"] }
egui-modal = "0.2.4"
encoding_rs = "0.8.33"
iset = "0.2.2"
log = "0.4.20"
notify = "6.1.1"
parse_int = "0.6.0"
rfd = "0.11.4"
serde = "1.0"
serde_json = "1.0"
