[package]
name = "bdiff"
version = "0.8.5"
edition = "2021"
authors = ["Ethan Roseman <ethteck@gmail.com>"]
license = "MIT"
repository = "https://github.com/ethteck/bdiff"
readme = "README.md"
description = """
A(nother) binary diffing tool
"""
publish = false
build = "build.rs"

[dependencies]
decomp_settings = "0.0.7"
anyhow = "1.0.86"
argh = "0.1.12"
dirs = "5.0.1"
dtoa = "1.0.9"
eframe = { version = "0.28.1", features = ["persistence"] }
egui-modal = "0.4.0"
egui-phosphor = "0.6.0"
encoding_rs = "0.8.34"
bdiff_hex_view = { version = "0.8.5", path="../hex_view" }
iset = "0.3.0"
log = "0.4.22"
mapfile_parser = "2.6.0"
notify = "6.1.1"
parse_int = "0.6.0"
rfd = "0.14.1"
serde = "1.0"
serde_json = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
anyhow = "1.0.81"
vergen-gitcl = { version = "1.0.0", features = ["build", "cargo"] }
