[package]
name = "bdiff_hex_view"
version = "0.8.5"
edition = "2021"
authors = ["Ethan Roseman <ethteck@gmail.com>"]
license = "MIT"
repository = "https://github.com/ethteck/bdiff"
readme = "README.md"
publish = false

[dependencies]
egui = { version = "0.26.2", features = ["persistence"] }
serde = "1.0"
serde_json = "1.0"
